@@ -41,8 +41,8 @@
   </ul>
   #end if
 
-  #if $person.has_key('bugzilla-account')
-  <strong>$_("Bugzilla account:")</strong> $person['bugzilla-account']<br />
+  #if $person.has_key('nospambugzilla-account')
+  <strong>$_("Bugzilla account:")</strong> $person['nospambugzilla-account']<br />
   #end if
   #if $person.has_key('cvs-account')
   <strong>$_("SVN account:")</strong> <a href="http://cvs.gnome.org/bonsai/cvsquery.cgi?treeid=default&module=all&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=${person['cvs-account']}&whotype=match&sortby=Date&hours=2&date=week&mindate=&maxdate=&cvsroot=%2Fcvs%2Fgnome">${person['cvs-account']}</a><br />
